# payserver-commons

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
auth/: Cargo.toml  README.md
auth/src/: captcha.rs  error.rs  lib.rs  metrics.rs  models.rs  permissions.rs  repository.rs  service.rs  store.rs  traits.rs
auth/src/api/: api_keys.rs  management.rs  mod.rs  passkey.rs  recovery.rs  wallet.rs
auth/src/service/: config.rs  device.rs  mod.rs  passkey.rs  recovery.rs  session.rs  tests.rs  validation.rs  wallet.rs
crypto/: Cargo.toml  README.md
crypto/src/: asymmetric.rs  error.rs  kdf.rs  lib.rs  mnemonic.rs  symmetric.rs  types.rs
rates/: Cargo.toml
rates/src/: currency.rs  lib.rs  provider.rs
rates/src/providers/: cached.rs  coingecko.rs  fallback.rs  kraken.rs  mod.rs  noop.rs
rates/tests/: integration.rs
types/: Cargo.toml  README.md
types/src/: currency.rs  error.rs  lib.rs  store.rs  traits.rs  types.rs
types/src/repositories/: error.rs  expired_invoice.rs  invoice.rs  live_watched_address.rs  mod.rs  payment.rs  payment_event.rs  payment_option.rs  payout.rs  refund.rs  store_payment_method.rs  store_settings.rs  store_token_policy.rs  store_wallet.rs  store_webhook.rs  token.rs  watched_address.rs  webhook_delivery.rs
types/src/types/: events.rs  ids.rs  invoice.rs  mod.rs  network.rs  payment_option.rs  payout.rs  refund.rs  store.rs  store_token_policy.rs  token.rs  watched_address.rs
ui-kit/: Cargo.toml
ui-kit/src/: lib.rs  module.rs  theme.rs  types.rs
ui-kit/src/auth/: api.rs  mod.rs  session.rs  types.rs  wallet.rs  webauthn.rs
ui-kit/src/auth/components/: captcha.rs  login_page.rs  mod.rs  passkey_auth.rs  recovery_setup.rs  register_page.rs  wallet_connect.rs
ui-kit/src/components/: buttons.rs  cards.rs  forms.rs  layout.rs  loading.rs  mod.rs
ui-kit/src/components/crypto/: address.rs  amount.rs  mod.rs  network_badge.rs  qr_code.rs
ui-kit/src/hooks/: mod.rs  use_api.rs  use_auth.rs  use_storage.rs
