[package]
name = "auth"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license = "MIT"
description = "User authentication and device management for PayServer"

[dependencies]
# Internal crates
crypto = { path = "../crypto" }
types = { path = "../types", features = ["openapi"] }

# Async
async-trait = "0.1"
tokio = { version = "1.40", features = ["sync"] }

# Web framework
axum = "0.8"

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebAuthn/Passkey
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation", "conditional-ui"] }
webauthn-rs-proto = "0.5"
url = "2.5"
base64 = "0.22"

# Metrics (optional)
metrics = { version = "0.24", optional = true }

# CAPTCHA verification (optional)
reqwest = { version = "0.12", features = ["json"], optional = true }
tracing = { version = "0.1", optional = true }

# Utilities
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2.6"
sha2 = "0.10"

# Ethereum wallet authentication
# TODO: Upgrade alloy-primitives when a version drops unmaintained transitive deps:
#   - derivative (RUSTSEC-2024-0388) via ark-ff -> ruint
#   - paste (RUSTSEC-2024-0436) via ark-ff -> ruint
alloy-primitives = "0.8"  # Address type, checksumming (EIP-55)
k256 = { version = "0.13", features = ["ecdsa"] }  # secp256k1 signature recovery
sha3 = "0.10"  # Keccak256 for EIP-191 message hashing
hex = "0.4"  # Hex encoding/decoding for signatures

[features]
default = []
metrics = ["dep:metrics"]
captcha = ["dep:reqwest", "dep:tracing"]

[dev-dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
