[package]
name = "crypto"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license = "MIT"
description = "Cryptographic primitives for PayServer (Bitwarden-style encryption)"

[dependencies]
# Key derivation
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }

# Symmetric encryption
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
hmac = "0.12"

# Asymmetric cryptography
x25519-dalek = { version = "2.0", features = ["static_secrets", "zeroize"] }
ed25519-dalek = { version = "2.1", features = ["rand_core", "zeroize"] }

# BIP39 mnemonic
bip39 = "2.1"

# Utilities
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
subtle = "2.6"

[dev-dependencies]
hex = "0.4"
serde_json = "1.0"
