[package]
name = "rates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Exchange rate providers and currency utilities for PayServer"

[dependencies]
# Async runtime
async-trait = "0.1"
tokio = { version = "1.42", features = ["rt", "sync"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Decimal math
rust_decimal = "1.36"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "time"] }
wiremock = "0.6"
