[package]
name = "types"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license = "MIT"
description = "Common types and traits for PayServer ecosystem"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
tokio = { version = "1.42", features = ["sync"] }
async-trait = "0.1"
futures = "0.3"
utoipa = { version = "5.3", optional = true }

[features]
default = []
openapi = ["utoipa"]

[dev-dependencies]
