[package]
name = "ui-kit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared UI components for random.cash frontends"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Shared types from payserver-commons
types = { path = "../types" }

# Leptos framework
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"

# WASM interop
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "Navigator",
    "Clipboard",
    "Storage",
    "MediaQueryList",
    "console",
] }

# QR Code generation
qrcode = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for API calls
gloo-net = "0.6"
gloo-timers = "0.3"
gloo-storage = "0.3"

# Utilities
thiserror = "2.0"
console_error_panic_hook = "0.1"

[features]
default = []
# Enable when integrating with a component library
# leptonic = ["dep:leptonic"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
